Set color vars and include Open Sans declaration

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -3,5 +3,13 @@
    - Defines theme colors
    ========================================================================== */
 
-$white: #ffffff;
 $black: #000000;
+$darkGray: #2c2c2c;
+$gray1: #efefef;
+$gray2: #ccc;
+$gray3: #767676;
+$blue: #077da8;
+$pink: #d10255;
+$yellow: #fbb101;
+$white: #ffffff;
+$beige: #eae5d8;
