--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -9,18 +9,12 @@
   line-height: 1em;
 }
 
-@mixin body-copy() {
-  font-family: Helvetica, Arial, Verdana, sans-serif;
-  line-height: 1.2em;
-  font-weight: normal;
-}
-
 /* ==========================================================================
    GLOBAL TYPE STYLES
    ========================================================================== */
 html,
 body {
-  @include body-copy;
+  @include open-sans;
 }
 
 /* ==========================================================================
