--- a/scss/utils.scss
+++ b/scss/utils.scss
@@ -1,1 +1,1 @@
-@import "normalize", "mixins", "colors", "typography", "buttons", "global";
+@import "mixins", "colors", "typography", "buttons", "global";
