--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -1,7 +1,11 @@
 @import "../utils.scss";
 
 #site-header {
-  padding: 1.5em 3em;
+  padding: 2em 3em;
+  height: 90px;
+  width: 80%;
+  margin: 0 auto;
+  border-bottom: 1px solid black;
   display: grid;
   grid-template-columns: 30% 70%;
   grid-template-rows: 1fr 1fr;
@@ -24,6 +28,7 @@
 
 #primary-menu-container {
   grid-area: lowermenu;
+  margin-top: 9px;
 
   ul {
     float: right;
@@ -36,12 +41,12 @@
       color: $white;
       text-transform: uppercase;
       letter-spacing: 1px;
-      padding: 0 0.5em;
+      padding: 0 0.5em 0.2em 0.5em;
       font-size: 0.9em;
       transition: color 0.1s ease-in-out;
 
       &:hover {
-        color: $blue;
+        border-bottom: 2px solid $white;
         transition: color 0.1s ease-in-out;
       }
     }
