--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -1,10 +1,29 @@
 @import "../utils.scss";
 
+/* HERO ===== */
 #hero {
-  height: 30vh;
+  height: 670px;
   background-size: cover;
   display: block;
   background: $pink;
+  top: 50%;
+  margin-top: -160px;
+
+  h2 {
+    text-align: center;
+    font-weight: bold;
+    color: $white;
+    font-size: 3em;
+    text-transform: uppercase;
+    line-height: 1.3em;
+    letter-spacing: 0.1em;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0 2%;
+    width: 70%;
+    margin: 0 auto;
+  }
 }
 
 .hero-bg-1 {
@@ -17,4 +36,62 @@
 
 .hero-bg-3 {
   background: url("../../img/carousel-3.jpg") top center no-repeat !important;
+}
+
+/* BOX LINKS ===== */
+#homepage-box-links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.box-link {
+  background: $pink;
+  color: $white;
+  text-align: center;
+  height: 400px;
+  padding: 3em 3em 2em 3em;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas:
+    "main"
+    "text"
+    "button";
+
+  .box-link-title {
+    grid-area: main;
+    align-self: end;
+  }
+
+  h3 {
+    font-size: 2em;
+    margin: 0;
+    line-height: 1.3em;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+  }
+
+  p {
+    font-size: 1.7em;
+    width: 80%;
+    margin: 0 auto;
+    line-height: 1.5em;
+    grid-area: text;
+  }
+
+  a {
+    grid-area: button;
+    min-width: 20%;
+    margin: 2em auto 0 auto;
+    height: 20px;
+
+    &:hover {
+      color: #000;
+      font-weight: bold;
+      background: #fff;
+    }
+  }
+
+  &:last-child {
+    background: $blue;
+  }
 }
