--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -95,3 +95,42 @@
     background: $blue;
   }
 }
+
+/* TESTIMONIALS ===== */
+#testimonials {
+  background: $beige;
+  text-align: center;
+  color: $black;
+  padding: 4em;
+
+  h3 {
+    font-size: 1.5em;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+  }
+
+  h4 {
+    font-size: 2em;
+    font-weight: 300;
+    line-height: 1.4em;
+    width: 85%;
+    margin: 0 auto;
+  }
+
+  h6 {
+    color: $pink;
+    font-size: 1.5em;
+    font-style: italic;
+    font-weight: 300;
+    margin-top: em(10px);
+  }
+
+  a {
+    width: 20%;
+    margin: 0 auto;
+  }
+
+  .divider {
+    margin-top: 30px;
+  }
+}
