--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -7,6 +7,7 @@
   font-family: "Open Sans", Helvetica, Arial, Verdana, sans-serif;
   font-weight: 400;
   line-height: 1em;
+  color: #2c2c2c;
 }
 
 /* ==========================================================================
