Style classes archive page

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -23,3 +23,25 @@ body {
     background: #000;
   }
 }
+
+.internal-container {
+  h1 {
+    text-align: center;
+    @include open-sans;
+    line-height: 1.3em;
+    font-size: 3em;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 1em auto 0.2em auto;
+  }
+
+  p.intro-copy {
+    font-size: 1.4em;
+    line-height: 1.4em;
+    margin-bottom: 3em;
+    text-align: center;
+    width: 70%;
+    max-width: 1000px;
+    margin: 0 auto 3em auto;
+  }
+}
