--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -4,7 +4,7 @@
   background: $darkGray;
   padding-top: 50px;
   padding-bottom: 120px;
-  margin-top: 60px;
+  margin-top: 8em;
 }
 
 #newsletter-signup {
