Add a new ivory highlight color, make the hover effect on the class listing less jarring

--- a/scss/pages/class-archive.scss
+++ b/scss/pages/class-archive.scss
@@ -25,10 +25,12 @@
   height: calc(100% - 4em);
   padding: 2em;
   overflow: hidden;
+  transition: all 0.1s linear;
 
   &:hover {
-    background: $yellow;
-    transition: background 0.1s linear;
+    background: $ivory;
+    border: 1px solid $pink;
+    transition: all 0.1s linear;
   }
 }
 
