--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -68,6 +68,7 @@
     line-height: 1.3em;
     text-transform: uppercase;
     letter-spacing: 0.1em;
+    font-weight: 700;
   }
 
   p {
@@ -114,7 +115,7 @@
     font-weight: 300;
     line-height: 1.4em;
     width: 85%;
-    margin: 0 auto;
+    margin: 0 auto 0.5em auto;
   }
 
   h6 {
@@ -122,7 +123,7 @@
     font-size: 1.5em;
     font-style: italic;
     font-weight: 300;
-    margin-top: em(10px);
+    margin-bottom: 1.5em;
   }
 
   a {
@@ -151,6 +152,7 @@
     font-size: 2em;
     font-weight: 700;
     line-height: 1.3em;
+    margin-bottom: 0.5em;
   }
 
   ul {
@@ -169,7 +171,7 @@
     letter-spacing: 0.1em;
     font-size: 1em;
     line-height: 1.3em;
-    margin-bottom: 3px;
+    margin-bottom: 0.5em;
   }
 
   h6 {
