--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -69,3 +69,49 @@
   height: 15px;
   padding: 0.8em 2em;
 }
+
+/* MEDIA QUERIES ===== */
+@media only screen and (max-width: $large) {
+  #site-header {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+      "logo"
+      "lowermenu";
+    padding-bottom: 3em;
+
+    .home & {
+      padding-bottom: 2em;
+    }
+  }
+
+  #logo {
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  #header-donate {
+    display: none;
+  }
+
+  #primary-menu-container ul {
+    float: none;
+    margin: 1em auto;
+    width: 560px;
+  }
+}
+
+@media only screen and (max-width: $medium) {
+  #site-header {
+    padding: 2em;
+  }
+
+  #logo {
+    margin: 0;
+  }
+
+  #primary-menu-container {
+    display: none;
+  }
+}
