--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -156,15 +156,16 @@
 
 @media only screen and (max-width: $small) {
   #footer-social {
-    width: 20%;
+    width: 25%;
     float: left;
     margin-left: 7.5%;
   }
 
   #footer-links {
     @include no-space;
+    font-size: 0.7em;
     float: left;
-    width: 60%;
+    width: 50%;
     margin-left: 10%;
     display: grid;
     grid-template-rows: 1fr 1fr;
