--- a/scss/pages/class-archive.scss
+++ b/scss/pages/class-archive.scss
@@ -102,3 +102,22 @@
     }
   }
 }
+
+/* MEDIA QUERIES ===== */
+@media only screen and (max-width: $extra-large) {
+  #class-listing-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: $large) {
+  #class-listing-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: $medium) {
+  #class-listing-container {
+    grid-template-columns: 1fr;
+  }
+}
