--- a/scss/pages/our-story.scss
+++ b/scss/pages/our-story.scss
@@ -8,6 +8,7 @@
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 1em;
+    line-height: 1.3em;
 
     &:first-child {
       margin-top: 2em;
@@ -105,6 +106,7 @@
     font-weight: 700;
     font-size: 1.5em;
     margin-top: 1.5em;
+    line-height: 1.2em;
     text-transform: uppercase;
   }
 
@@ -125,6 +127,45 @@
 
     &:hover {
       color: $black;
+    }
+  }
+}
+
+/* MEDIA QUERIES ===== */
+@media only screen and (max-width: $large) {
+  #our-story-container {
+    p {
+      width: 100%;
+    }
+  }
+
+  #learn-more {
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: $large) {
+  .quote {
+    h3 {
+      font-size: 1.2em;
+    }
+  }
+
+  #learn-more {
+    grid-template-columns: 1fr;
+  }
+
+  .learn-item {
+    margin-bottom: 2em;
+    border-top: 1px solid $gray1;
+    padding-top: 4em;
+
+    p {
+      padding-bottom: 0;
+    }
+
+    .btn-yellow {
+      position: relative;
     }
   }
 }
