--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -104,7 +104,7 @@
 
 @media only screen and (max-width: $medium) {
   #site-header {
-    padding: 2em;
+    padding: 2em 2em 0 2em;
   }
 
   #logo {
