--- a/scss/pages/support-us.scss
+++ b/scss/pages/support-us.scss
@@ -41,3 +41,11 @@
     margin-top: 47px;
   }
 }
+
+/* MEDIA QUERIES ===== */
+@media only screen and (max-width: $large) {
+  .support-section {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+}
