--- a/scss/pages/contact.scss
+++ b/scss/pages/contact.scss
@@ -9,3 +9,10 @@
     line-height: 1.3em;
   }
 }
+
+/* MEDIA QUERIES ===== */
+@media only screen and (max-width: $large) {
+  #contact-info {
+    grid-template-columns: 1fr;
+  }
+}
