Add current page indicator in header menu

--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -58,6 +58,13 @@
     &:last-child a {
       padding-right: 0;
     }
+
+    &.current-menu-item {
+      a {
+        border-bottom: 2px solid $white;
+        transition: color 0.1s ease-in-out;
+      }
+    }
   }
 }
 
