--- a/scss/pages/contact.scss
+++ b/scss/pages/contact.scss
@@ -3,10 +3,15 @@
 #contact-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-gap: 3em;
 
   a {
     height: 40px;
     line-height: 1.3em;
+  }
+
+  iframe {
+    width: 100%;
   }
 }
 
